Bug 1779800 - Fix WebGL instancing in some cases on Mac. r=gfx-reviewers,lsalzman

This reverts the code that would collapse DrawElements to DrawArrays in some cases,
because it was not a correct transform in some cases.

Instead, we need to *always* keep around a cpu copy of the index buffer,
so that we can figure out how many fakeAttrib0 verts we need.

Finally, in order to correct for the bug where Mac offsets the base instance by `first` in DrawArrays,
we need to (temporarily) patch vertexAttribPointer offsets for any call with non-zero `first`.
(This can be disabled via MOZ_WEBGL_WORKAROUND_FIRST_AFFECTS_INSTANCE_ID=0)

Differential Revision: https://phabricator.services.mozilla.com/D157169